# siegfried

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json
.github/workflows/: ci.yml
scripts/: build-guide-pdf.sh  build-universal.sh  bundle-deps.sh  bundle-tools.sh  test-anonymizer.ts
src/: App.css  App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf_redact.rs  text_extract.rs  tool_paths.rs
src/components/: AboutModal.tsx  Dropzone.tsx  EntityPanel.tsx  ExportPanel.tsx  FileList.tsx  SearchBar.tsx  TextViewer.tsx
src/lib/: anonymizer.ts  crypto.ts  juritools.ts  pseudo-map.ts  redact-mapping.ts  regex-fr.ts  types.ts
