[package]
name = "siegfried"
version = "0.1.0"
description = "Local PDF anonymizer for French lawyers"
authors = ["Marc Sztulman"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/0Janvier/siegfried"
homepage = "https://github.com/0Janvier/siegfried"
readme = "../README.md"

[lib]
name = "siegfried_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
anyhow = "1"
encoding_rs = "0.8"
chardetng = "0.1"
